Bug 1743731 - Disable the 'two layers that scroll together' assertion for content being presented in a paginated way. r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D146972